Project 'drm/intel' was moved to 'drm/i915/kernel'. Please update any links and bookmarks that may still have the old path.
igt@gem_exec_balancer@bonded-early - fail - Failed assertion: !"GPU hung", IPEHR: 0x18800101
Starting subtest: bonded-early
(gem_exec_balancer:1478) igt_aux-CRITICAL: Test assertion failure function sig_abort, file ../lib/igt_aux.c:502:
(gem_exec_balancer:1478) igt_aux-CRITICAL: Failed assertion: !"GPU hung"
Subtest bonded-early failed.
````
````
<7> [539.563473] heartbeat [0360] 00000000 00000000 00000000 00000000 00000000 00000000 00000000 00000000
<7> [539.563476] heartbeat *
<7> [539.563482] heartbeat On hold?: 0
<7> [539.563485] heartbeat MMIO base: 0x001d0000
<7> [539.563823] heartbeat EL_STAT_HI: 0x20020020
<7> [539.563829] heartbeat EL_STAT_LO: 0x40003098
<7> [539.563834] heartbeat RING_START: 0x0082a000
<7> [539.563839] heartbeat RING_HEAD: 0x000000e0
<7> [539.563845] heartbeat RING_TAIL: 0x00000118
<7> [539.563853] heartbeat RING_CTL: 0x00003001
<7> [539.563861] heartbeat RING_MODE: 0x00000000
<7> [539.563867] heartbeat RING_IMR: 0x00000000
<7> [539.563872] heartbeat RING_ESR: 0x00000000
<7> [539.563877] heartbeat RING_EMR: 0xfffffffe
<7> [539.563883] heartbeat RING_EIR: 0x00000000
<7> [539.563894] heartbeat ACTHD: 0x00000000_00040e58
<7> [539.563904] heartbeat BBADDR: 0x00000000_00040041
<7> [539.563915] heartbeat DMA_FADDR: 0x00000000_00040380
<7> [539.563921] heartbeat IPEIR: 0x00000000
<7> [539.563926] heartbeat IPEHR: 0x18800101
<7> [539.563929] heartbeat Execlist tasklet queued? no (enabled), preempt? expired, timeslice? expired
<7> [539.563938] heartbeat Execlist status: 0x40003098 20020020; CSB read:11, write:11, entries:12
<7> [539.563947] heartbeat Active[0]: ccid:20020020!, ring:{start:0082a000, hwsp:fedd90c0, seqno:00000003, runtime:0ms}, rq: 16b4:4*- prio=0 @ 15481ms: gem_exec_balanc[1478]
<7> [539.563954] heartbeat Pending[0]: ccid:20020040, ring:{start:0082e000, hwsp:fedd9100, seqno:00000000, runtime:0ms}, rq: 16b5:2 prio=0 @ 15479ms: gem_exec_balanc[1478]
<7> [539.563960] heartbeat E 16b5:2 prio=0 @ 15479ms: gem_exec_balanc[1478]
<7> [539.563964] heartbeat Queue priority hint: 2147483646
<7> [539.563968] heartbeat Q 8:bc* prio=2147483646 @ 11968ms: [i915]
<7> [539.563972] heartbeat V 16b4:4*- prio=0 @ 15481ms: gem_exec_balanc[1478]
<7> [539.563975] heartbeat HWSP:
````